--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com and Pinar Modified it- No Copyright -->
-  <title>Bootstrap Theme The Band</title>
+  
+  <title>Bootstrap Theme Website</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="assets\css\reset.css" rel="stylesheet" type="text/css">
