Updated Index html and images

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   
-  <title>Bootstrap Theme Website</title>
+  <title>Bootstrap Theme Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="assets\css\reset.css" rel="stylesheet" type="text/css">
@@ -50,7 +50,7 @@ On my free time, I enjoy traveling, cooking and spending time with my family.</p
     <div class="col-sm-4">
       <p class="text-center"><strong></strong></p><br>
       <a href="#demo" data-toggle="collapse">
-        <img src="assets\images\github.JPG" class="img-circle person" alt="github" width="200px" height="200px">
+        <img src="assets\images\gitty.png" class="img-circle person" alt="github" width="200px" height="200px">
       </a>
       <div id="demo" class="collapse">
         <p><a href="https://github.com/ptokmak" target="_blank">Git Repositories</a></p>
@@ -61,10 +61,10 @@ On my free time, I enjoy traveling, cooking and spending time with my family.</p
     <div class="col-sm-4">
       <p class="text-center"><strong>Connect with Me!</strong></p><br>
       <a href="#demo2" data-toggle="collapse">
-        <img src="assets\images\linkedIn.jpg" class="img-circle person" alt="LinkedIn" width="200px" height="200px">
+        <img src="assets\images\linkedIn.png" class="img-circle person" alt="LinkedIn" width="200px" height="200px">
       </a>
       <div id="demo2" class="collapse">
-        <p>Linked In Profile</p>
+        <p>LinkedIn Profile</p>
         <p>Network</p>
         <p>Resume</p>
       </div>
