--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   
-  <title>Bootstrap Theme Portfolio</title>
+  <title>Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -44,8 +44,9 @@
   <h3>ABOUT ME</h3>
   <img src="assets\images\my_image.jpg">
   <p><em>I love coding!</em></p>
-  <p>I am a student at UCF Coding Bootcamp. I currently work fulltime at a large title company as a QC Analyst in the IT department. My position requires handling daily vital QC processes and multitasking skills. I have a brief background in web development and graphic designing. I am interested becoming a succesful full stack developer and looking forwards to finding a position after completing the coding Bootcamp program. <br/>
-On my free time, I enjoy traveling, cooking and spending time with my family.</p>
+  <p>I am currently a student enrolled in the University of Central Florida’s full stack web development program. I am seeking the opportunity to demonstrate my skills and strength in web development, as well as pose a challenge. I am looking for a position that will encourage growth as an individual, as well as foster growth within a company.   I have proven my hard working skills and strong organization skills. Keywords that best describes me:  Loyal, hardworking, fast learner, efficient, reliable, inventive, proactive, self-motivated, and team player.</p> <br/>
+<h3>SKILLS</h3>
+<p>JavaScript, jQuery, Node.js, Express, HTML5/CSS3, Bootstrap, Git, Responsive Design, API/JSON, RESTful API, MySQL, MS SQL Server, Ajax, MongoDB, React.js, Angular2 REMN Stack Development, Laravel, PHP</p>
   <br>
   <div class="row">
     <div class="col-sm-4">
@@ -55,8 +56,8 @@ On my free time, I enjoy traveling, cooking and spending time with my family.</p
       </a>
       <div id="demo" class="collapse">
         <p><a href="https://github.com/ptokmak" target="_blank">Git Repositories</a></p>
-        <p>Network</p>  
-        <p>Member since 2016</p>
+<!--         <p>Network</p>  
+        <p>Member since 2016</p> -->
       </div>
     </div>
     <div class="col-sm-4">
@@ -65,9 +66,9 @@ On my free time, I enjoy traveling, cooking and spending time with my family.</p
         <img src="assets\images\linkedIn.png" class="img-circle person" alt="LinkedIn" width="200px" height="200px">
       </a>
       <div id="demo2" class="collapse">
-        <p>LinkedIn Profile</p>
-        <p>Network</p>
-        <p>Resume</p>
+        <p><a href="https://www.linkedin.com/in/pinar-tokmak-4a12a911a" target="_blank">LinkedIn Profile</a></p>
+<!--         <p>Network</p>
+        <p>Resume</p> -->
       </div>
     </div>
     <div class="col-sm-4">
@@ -76,9 +77,9 @@ On my free time, I enjoy traveling, cooking and spending time with my family.</p
         <img src="assets\images\stackoverflow.jpg" class="img-circle person" alt="Stackoverflow" width="200px" height="200px">
       </a>
       <div id="demo3" class="collapse">
-        <p>My profile</p>
-        <p>Forums</p>
-        <p>Member since 2016</p>
+        <p>Profile coming soon.</p>
+<!--         <p>Forums</p>
+        <p>Member since 2016</p> -->
       </div>
     </div>
   </div>
@@ -89,39 +90,39 @@ On my free time, I enjoy traveling, cooking and spending time with my family.</p
   <div class="container">
     <h3 class="text-center">PORTFOLIO</h3>
     <p class="text-center">Every accomplishment starts with the decision to try!</p>
-    
+    <p class="text-center">Featured Projects!</p>
     
     <div class="row text-center">
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="assets\images\technics-q-c-640-480-1.jpg" alt="Paris" width="400" height="300">
-          <p><strong>Web Development</strong></p>
+          <img src="assets\images\webscraper.png" alt="Web Scraper" width="400" height="300">
+          <p><strong>Web Scraper</strong> <br/> Web scraper using Node, Express, Express-Handlebars, Cheerio, and MongoDB</p>
             <br/>
             <br/>
-          <button class="btn">View</button>
+          <button class="btn"><a href="https://github.com/ptokmak/WebScraper" target="_blank">View Code</a></button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="assets\images\technics-q-c-640-480-2.jpg" alt="New York" width="400" height="300">
-          <p><strong>Javascript</strong></p>
+          <img src="assets\images\reactjs.JPG" alt="Javascript" width="400" height="300">
+          <p><strong>Employee Tracker</strong> <br/> SPA using ReactJS-Express-MongoDB</p>
             <br/>
             <br/>
-          <button class="btn">View</button>
+          <button class="btn"><a href="https://github.com/ptokmak/EmployeeTracker" target="_blank">View Code</a></button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="assets\images\technics-q-c-640-480-7.jpg" alt="San Francisco" width="400" height="300">
-          <p><strong>Web Applications</strong></p>
+          <img src="assets\images\angular.jpg" alt="Angular 2" width="400" height="300">
+          <p><strong>Angular 2 App</strong><br/> Payroll table using Angular 2 framework</p>
             <br/>
             <br/>
-          <button class="btn">View</button>
+          <button class="btn"><a href="https://github.com/ptokmak/AngularApp" target="_blank">View Code</a></button>
         </div>
       </div>
     </div>
   </div>
-  
+    <h3 class="text-center">Visit all the repositories <a href="https://github.com/ptokmak" target="_blank"><strong>here!</strong></a></h3>
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
@@ -146,7 +147,7 @@ On my free time, I enjoy traveling, cooking and spending time with my family.</p
 <!-- Container (Contact Section) -->
 <div id="contact" class="container">
   <h3 class="text-center">Contact</h3>
-  <p class="text-center"><em>I love feedbacks!</em></p>
+  <p class="text-center"><em>Find out more about me!</em></p>
 
   <div class="row">
     <div class="col-md-4">
